--- a/Portfolio.html
+++ b/Portfolio.html
@@ -1,14 +1,13 @@
 ﻿<!DOCTYPE html>
 
 <head>
-    <link rel="stylesheet" href="style.css" />
-    
+<!--     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+ -->    <link rel="stylesheet" href="style.css" />
+
     <title></title>
 </head>
 <body onload="Load()">
-    <header>
-        <img id="img" src="./images/home.png"/>
-    </header>
+
     <div id="slider">
         <div id="imgs">
             <!-- here you have to add the img tag -->
@@ -36,13 +35,13 @@
             <!-- the info -->
             <div id="SnavBottom">
                 <!-- here you have to add the p tag-->
-                <p id="SP0">Support Image 1</p>
-                <p id="SP1">Support Image 2</p>
-                <p id="SP2">Support Image 3</p>
+                <p id="SP0">Support Image 1</p>  <a id="home" href="#"><i class="fa fa-home fa-4x white-txt" aria-hidden="true" onclick="home()"></i></a>
+                <p id="SP1">Support Image 2</p> 
+                <p id="SP2">Support Image 3</p> 
             </div>
         </div>
     </div>
         <script src="javascript.js"></script>
-
+        <script src="https://use.fontawesome.com/34223f476a.js"></script>
 </body>
 </html>
