third commit, animation, jquery to hide and show

--- a/Home.html
+++ b/Home.html
@@ -2,8 +2,9 @@
 <html lang="en">
 
 <head>
-<!-- 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
- -->	<title>Support Solutions</title>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
+ 	<title>Support Solutions</title>
 	<meta charset="utf-8"/>
 
 	<link rel="stylesheet" href="style.css" type="text/css" />
@@ -52,6 +53,7 @@
 			.searchbar{
 				width: 50%;
 				float: right;
+				background-color: #666; 
 			}
 
 			.tfnewsearch{
@@ -62,15 +64,15 @@
 			}
 
 			.tftextinput{
-			width: 74%;
-			box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-			margin: 0;
-			padding: 5px 15px;
-			font-family: Arial, Helvetica, sans-serif;
-			font-size:14px;
-			border:1px solid #666; border-right:0px;
-			border-top-left-radius: 5px 5px;
-			border-bottom-left-radius: 5px 5px;
+				width: 74%;
+				box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+				margin: 0;
+				padding: 5px 15px;
+				font-family: Arial, Helvetica, sans-serif;
+				font-size:14px;
+				border:1px solid #666; border-right:0px;
+				border-top-left-radius: 5px 5px;
+				border-bottom-left-radius: 5px 5px;
 			}
 
 			.tfbutton {
@@ -104,7 +106,8 @@
 	  		 width: 100%;
 	   		 height: auto;
 	   		 display: block;
-	    	margin: 0 auto;
+	    	 margin: 0 auto;
+	    	 border-radius: 5px;
 			}
 			</style>
 
@@ -113,43 +116,55 @@
 	<div class="mainContent">
 		<div class="content">
 			<article class="topContent">
+
+				<a class="arrow" href="#"> <i class="fa fa-arrow-circle-down fa-2x grey-txt" aria-hidden="true"></i> </a>
+				<a class="arrowup" href="#"> <i class="fa fa-arrow-circle-up fa-2x grey-txt" aria-hidden="true"></i> </a>
+ 				
 				<header>
-					<h2><a href="#" title="First Post">First Post</a></h2>
+					<h2><p title="First Post">First Post</p></h2>
 				</header>
 
 				<footer>
 					<p class="postinfo">Post One
 				</footer>
 
-				<content>
-					<p> This is where the paragraph goes </p>
+				<content class="detail">
+					<p> This is where the paragraph goes This is where the paragraph goes This is where the paragraph goes This is where the paragraph goes This is where the paragraph goes This is where the paragraph goes This is where the paragraph goes This is where the paragraph goes This is where the paragraph goes </p>
 				</content>
 			</article>
 
 			<article class="middleContent">
+
+				<a class="arrow2" href="#"> <i class="fa fa-arrow-circle-down fa-2x grey-txt" aria-hidden="true"></i> </a>
+				<a class="arrowup2" href="#"> <i class="fa fa-arrow-circle-up fa-2x grey-txt" aria-hidden="true"></i> </a>
+
 				<header>
-					<h2><a href="#" title="Second Post">Second Post</a></h2>
+					<h2><p href="#" title="Second Post">Second Post</p></h2>
 				</header>
 
 				<footer>
 					<p class="postinfo">Post two
 				</footer>
 
-				<content>
+				<content class="detail2">
 					<p> This is where the paragraph goes </p>
 				</content>
 			</article>
 
 			<article class="bottomContent">
+
+				<a class="arrow3" href="#"> <i class="fa fa-arrow-circle-down fa-2x grey-txt" aria-hidden="true"></i> </a>
+				<a class="arrowup3" href="#"> <i class="fa fa-arrow-circle-up fa-2x grey-txt" aria-hidden="true"></i> </a>
+
 				<header>
-					<h2><a href="#" title="Third Post">Third Post</a></h2>
+					<h2><p title="Third Post">Third Post</p></h2>
 				</header>
 
 				<footer>
 					<p class="postinfo">Post three
 				</footer>
 
-				<content>
+				<content class="detail3">
 					<p> This is where the paragraph goes </p>
 				</content>
 			</article>
