--- a/Home.html
+++ b/Home.html
@@ -17,6 +17,8 @@
 
 <body onload="autoRun()" class="body">
 <div id=animation>
+
+
 	<header>
 
 			<div class="title">
@@ -31,13 +33,36 @@
 			</div>
 
 
+		<div id="contactbody">
+		<div id="popupdiv">
+		<!-- Popup Div Starts Here -->
+			<div id="popupContact">
+							
+
+			<!-- Contact Us Form -->
+			
+			<form action="#" id="cform" method="post" name="form">
+				<a id="close" href="#" onclick ="div_hide()" ><i class="fa fa-times-circle-o fa-2x white-txt" aria-hidden="true"></i></a>
+				<h2 id="htwo2">Contact Us</h2>
+				<hr>
+				<input id="name" name="name" placeholder="Name" type="text">
+				<input id="email" name="email" placeholder="Email" type="text">
+				<textarea id="msg" name="message" placeholder="Message"></textarea>
+				<a href="javascript:%20check_empty()" id="submit">Send</a>
+			</form>
+			</div>
+		<!-- Popup Div Ends Here -->
+		</div>
+		
+		</div>
+
 			<div class="mainHeader">
 
 			<nav><ul>
 				<li class="active"><a href="Home.html"> <i class="fa fa-home fa-lg white-txt" aria-hidden="true"></i> Home</a></li>
 				<li><a href="#"><i class="fa fa-question-circle-o fa-lg" aria-hidden="true"></i> About</a></li>
 				<li><a href="Portfolio.html"><i class="fa fa-picture-o fa-lg" aria-hidden="true"></i> Portfolio</a></li>
-				<li><a href="#"><i class="fa fa-phone fa-lg"  aria-hidden="true"></i> Contact</a></li>
+				<li><a  href="#" onclick="div_show()"><i class="fa fa-phone fa-lg"  aria-hidden="true"></i> Contact</a></li>
 			</ul></nav>
 
 			</div>			
