sixth commit, contacts page done

--- a/Home.html
+++ b/Home.html
@@ -22,7 +22,7 @@
 	<header>
 
 			<div class="title">
-				<p>SUPPORT SOLUTIONS</p>
+				<a href="#" onclick="landing()"><p>SUPPORT SOLUTIONS</p><a>
 			</div>
 
 			<div class="searchbar">
@@ -59,7 +59,7 @@
 			<div class="mainHeader">
 
 			<nav><ul>
-				<li class="active"><a href="Home.html"> <i class="fa fa-home fa-lg white-txt" aria-hidden="true"></i> Home</a></li>
+				<li class="active"><a href="Home.html"> <i class="fa fa-home fa-lg" aria-hidden="true"></i> Home</a></li>
 				<li><a href="#"><i class="fa fa-question-circle-o fa-lg" aria-hidden="true"></i> About</a></li>
 				<li><a href="Portfolio.html"><i class="fa fa-picture-o fa-lg" aria-hidden="true"></i> Portfolio</a></li>
 				<li><a  href="#" onclick="div_show()"><i class="fa fa-phone fa-lg"  aria-hidden="true"></i> Contact</a></li>
@@ -116,18 +116,19 @@
 				text-decoration: none;
 				color: #ffffff;
 				border: solid 1px #666; border-right:0px;
-				background: #CF5C3F;
-				background: -webkit-gradient(linear, left top, left bottom, from(#CF5C3F), to(#CF5C3F));
-				background: -moz-linear-gradient(top,  #CF5C3F,  #CF5C3F);
+				background: #7cc576;
+				background: -webkit-gradient(linear, left top, left bottom, from(#7cc576), to(#7cc576));
+				background: -moz-linear-gradient(top,  #7cc576,  #7cc576);
 				border-top-right-radius: 5px 5px;
 				border-bottom-right-radius: 5px 5px;
 			}
 
 			.tfbutton:hover {
+				color:#7cc576;
 				text-decoration: none;
-				background: #B64B2E;
-				background: -webkit-gradient(linear, left top, left bottom, from(#B64B2E), to(#B64B2E));
-				background: -moz-linear-gradient(top,  #B64B2E,  #B64B2E);
+				background: #FFF;
+				background: -webkit-gradient(linear, left top, left bottom, from(#FFF), to(#FFF));
+				background: -moz-linear-gradient(top,  #FFF,  #FFF);
 			}
 
 			img {
