Eighth commit, landing page and home page combined, using jquery animation

--- a/Home.html
+++ b/Home.html
@@ -21,7 +21,22 @@
 
 	<header>
 
+
+	<div class="lheader" id="header"><!--header-start-->
+	<div class="container"></div>
+    	<figure class="logo">
+        	<a href="#"><img class="supportlogo" src="./images/s.png" alt=""></a>	
+        </figure>	
+        <h1 class="hone">Welcome To Support Solutions</h1>
+        <ul class="we-create">
+        	<li>We are a support agency that loves crafting beautiful support related interfaces.</li>
+        </ul>
+            <a href="#" class="link" >Enter Site</a>
+    </div>
+</header><!--header-end-->
+
 			<div class="title">
+				<img class="supportlogo2" src="./images/s.png" alt="">
 				<a href="#" onclick="landing()"><p>SUPPORT SOLUTIONS</p><a>
 			</div>
 
@@ -58,7 +73,7 @@
 
 			<div class="mainHeader">
 
-			<nav><ul>
+			<nav class=><ul>
 				<li class="active"><a href="Home.html"> <i class="fa fa-home fa-lg" aria-hidden="true"></i> Home</a></li>
 				<li><a href="#"><i class="fa fa-question-circle-o fa-lg" aria-hidden="true"></i> About</a></li>
 				<li><a href="Portfolio.html"><i class="fa fa-picture-o fa-lg" aria-hidden="true"></i> Portfolio</a></li>
@@ -201,6 +216,8 @@
 		</div>
 	</div>	
 
+	<div class="sidebars">
+
 	<aside class="top-sidebar">
 		<article>
 			<h2>Top Sidebar</h2>
@@ -226,6 +243,7 @@
 		<p>Copyright &copy; 2017 Muhammad Ajij</p>
 	</footer>
 
+</div>
 	<script src="javascript.js"></script>
     <script src="https://use.fontawesome.com/34223f476a.js"></script>
 </div>
