--- a/Portfolio.html
+++ b/Portfolio.html
@@ -4,10 +4,10 @@
 <!DOCTYPE html>
 
 <head>
-<!--     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
- -->    <link rel="stylesheet" href="style.css" />
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>   
+<link rel="stylesheet" href="style.css" />
 
-    <title></title>
+    <title>Portfolio</title>
 </head>
 <body onload="Load()">
 
@@ -38,7 +38,7 @@
             <!-- the info -->
             <div id="SnavBottom">
                 <!-- here you have to add the p tag-->
-                <p id="SP0">Support Image 1</p>  <a id="home" href="#"><i class="fa fa-home fa-4x white-txt" aria-hidden="true" onclick="home()"></i></a>
+                <p id="SP0">Support Image 1</p>  <a id="home" href="#"><i class="fa fa-home fa-4x white-txt" aria-hidden="true"></i></a>
                 <p id="SP1">Support Image 2</p> 
                 <p id="SP2">Support Image 3</p> 
             </div>
