Ninth, about page added, JSON functioning on contacts page

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -32,15 +32,15 @@
             </div>
             <!-- the left and right button -->
             <div id="SnavMiddle">
-                <img id="Sleft" src="./images/left.png" onclick="prev()"/>
-                <img id="Sright" src="./images/right.png" onclick="next()"/>
-            </div>
+                <a id="Sleft" onclick="prev()"><i class="fa fa-arrow-circle-left fa-4x" aria-hidden="true"></i>
+                <a id="Sright" onclick="next()"><i class="fa fa-arrow-circle-right fa-4x" aria-hidden="true"></i>            </div>
             <!-- the info -->
             <div id="SnavBottom">
                 <!-- here you have to add the p tag-->
-                <p id="SP0">Support Image 1</p>  <a id="home" href="#"><i class="fa fa-home fa-4x white-txt" aria-hidden="true"></i></a>
+                <p id="SP0">Support Image 1</p>  <a id="home" onclick="home()" href="#"><i class="fa fa-home fa-4x white-txt" aria-hidden="true"></i></a>
                 <p id="SP1">Support Image 2</p> 
                 <p id="SP2">Support Image 3</p> 
+                
             </div>
         </div>
     </div>
