--- a/About.html
+++ b/About.html
@@ -7,7 +7,7 @@
 <head>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
- 	<title>Support Solutions</title>
+ 	<title>About</title>
 	<meta charset="utf-8"/>
 
 	<link rel="stylesheet" href="style.css" type="text/css" />
@@ -21,8 +21,8 @@
 
 	<header>
 
-
-	<div class="lheader" id="header"><!--header-start-->
+<!-- 
+	<div class="lheader" id="header"><!--header-start
 	<div class="container"></div>
     	<figure class="logo">
         	<a href="#"><img class="supportlogo" src="./images/s.png" alt=""></a>	
@@ -32,7 +32,8 @@
         	<li>We are a support agency that loves crafting beautiful support related interfaces.</li>
         </ul>
             <a href="#" class="link" >Enter Site</a>
-    </div>
+    </div> -->
+    
 </header><!--header-end-->
 
 			<div class="title">
@@ -62,17 +63,10 @@
 				<a id="close" href="#" onclick ="div_hide()" ><i class="fa fa-times-circle-o fa-2x white-txt" aria-hidden="true"></i></a>
 				<h2 id="htwo2">Contact Us</h2>
 				<hr>
-
-
-				<input id="name" name="name" placeholder="Please Enter First Name" type="text">
-				<input id="sname" name="name" placeholder="Please Enter Surname Name" type="text">
-
-				<input  id="email" name="email" placeholder="Please Enter Your Email" type="text">
-				<textarea  id="msg" name="message" placeholder="How May We Help You?"></textarea>
-				<a href="javascript:%20check_empty()" onclick="myFunction()" id="submit">Send</a>
-
-								<p id="demo"> </p>
-
+				<input id="name" name="name" placeholder="Name" type="text">
+				<input id="email" name="email" placeholder="Email" type="text">
+				<textarea id="msg" name="message" placeholder="Message"></textarea>
+				<a href="javascript:%20check_empty()" id="submit">Send</a>
 			</form>
 			</div>
 		<!-- Popup Div Ends Here -->
@@ -80,11 +74,11 @@
 		
 		</div>
 
-			<div class="mainHeader wow fadeInUp delay-04s">
+			<div class="mainHeader">
 
 			<nav class=><ul>
 				<li class="active"><a href="Home.html"> <i class="fa fa-home fa-lg" aria-hidden="true"></i> Home</a></li>
-				<li><a href="About.html"><i class="fa fa-question-circle-o fa-lg" aria-hidden="true"></i> About</a></li>
+				<li><a href="#"><i class="fa fa-question-circle-o fa-lg" aria-hidden="true"></i> About</a></li>
 				<li><a  href="Portfolio.html"><i class="fa fa-picture-o fa-lg" aria-hidden="true"></i> Portfolio</a></li>
 				<li><a  href="#" onclick="div_show()"><i class="fa fa-phone fa-lg"  aria-hidden="true"></i> Contact</a></li>
 			</ul></nav>
