Tenth commit, @media added to maintain responsivity

--- a/Home.html
+++ b/Home.html
@@ -64,14 +64,13 @@
 				<hr>
 
 
-				<input id="name" name="name" placeholder="Please Enter First Name" type="text">
-				<input id="sname" name="name" placeholder="Please Enter Surname Name" type="text">
+				<input id="name" name="name" placeholder="Please Enter Your First Name" type="text">
+				<input id="sname" name="name" placeholder="Please Enter Your Last Name" type="text">
 
 				<input  id="email" name="email" placeholder="Please Enter Your Email" type="text">
 				<textarea  id="msg" name="message" placeholder="How May We Help You?"></textarea>
 				<a href="javascript:%20check_empty()" onclick="myFunction()" id="submit">Send</a>
 
-								<p id="demo"> </p>
 
 			</form>
 			</div>
@@ -106,7 +105,7 @@
 			.searchbar{
 				width: 50%;
 				float: right;
-				background-color: #666; 
+	background:url(./images/pw_maze_black_2X.png) left top repeat;
 			}
 
 			.tfnewsearch{
