--- a/Home.html
+++ b/Home.html
@@ -10,12 +10,14 @@
  	<title>Support Solutions</title>
 	<meta charset="utf-8"/>
 
-	<link rel="stylesheet" href="style.css" type="text/css" />
+	<link id="dark" rel="stylesheet" href="style.css" type="text/css" />
+	
+
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
 </head>
 
-<body onload="autoRun()" class="body">
+<body onload="time()" class="body">
 <div id=animation>
 
 
@@ -24,6 +26,22 @@
 
 	<div class="lheader" id="header"><!--header-start-->
 	<div class="container"></div>
+
+	<!-- <div class="toggle">
+	<p  id="livetimes"></p>	
+		<h2 class="theme">Theme Switch</h2>
+		<button onclick="swapStyleSheet('light.css')">Light Theme</button>
+		<button onclick="swapStyleSheet('style.css')">Dark Theme</button>
+   	</div> -->
+
+	<div class="toggle">
+		<p  id="livetimes"></p>
+		<div id="buttons">
+			<button onclick="swapStyleSheet('light.css')">Light Theme</button>
+			<button onclick="swapStyleSheet('style.css')">Dark Theme</button>
+		</div>	
+	</div>	
+
     	<figure class="logo">
         	<a href="#"><img class="supportlogo" src="./images/s.png" alt=""></a>	
         </figure>	
@@ -32,6 +50,8 @@
         	<li>We are a support agency that loves crafting beautiful support related interfaces.</li>
         </ul>
             <a href="#" class="link" >Enter Site</a>
+
+ 	</div>           
     </div>
 </header><!--header-end-->
 
@@ -45,6 +65,7 @@
 				        <input type="text" class="tftextinput" name="q" size="21" maxlength="120"><input type="submit" value="search" class="tfbutton">
 				</form>
 				<div class="tfclear"></div>
+			<!-- 	<div><p onload="time()" id="time"></p></div> -->
 			</div>
 
   
@@ -79,7 +100,7 @@
 		
 		</div>
 
-			<div class="mainHeader wow fadeInUp delay-04s">
+			<div class="mainHeader">
 
 			<nav class=><ul>
 				<li class="active"><a href="Home.html"> <i class="fa fa-home fa-lg" aria-hidden="true"></i> Home</a></li>
