Thirteenth Commit, two themes complete

--- a/Home.html
+++ b/Home.html
@@ -41,10 +41,14 @@
 			<button onclick="swapStyleSheet('style.css')">Dark Theme</button>
 		</div>	
 	</div>	
-
+	<div class="sl">
     	<figure class="logo">
-        	<a href="#"><img class="supportlogo" src="./images/s.png" alt=""></a>	
+    		<div class="supportlogo">
+        	<!-- <img class="supportlogo" src="./images/s.png" alt="">	 -->
+        	</div>
         </figure>	
+
+    </div>
         <h1 class="hone">Welcome To Support Solutions</h1>
         <ul class="we-create">
         	<li>We are a support agency that loves crafting beautiful support related interfaces.</li>
@@ -176,7 +180,6 @@
 			}
 
 			img {
-			 box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 	  		 width: 100%;
 	   		 height: auto;
 	   		 display: block;
@@ -247,30 +250,30 @@
 
 	<div class="sidebars">
 
-	<aside class="top-sidebar">
-		<article>
-			<h2>Top Sidebar</h2>
-			<p>Top sidebar paragraph</p>
-		</article>
-	</aside>
+		<aside class="top-sidebar">
+			<article>
+				<h2>Top Sidebar</h2>
+				<p>Top sidebar paragraph</p>
+			</article>
+		</aside>
 
-	<aside class="middle-sidebar">
-		<article>
-			<h2>Middle Sidebar</h2>
-			<p>Middle sidebar paragraph</p>
-		</article>
-	</aside>
+		<aside class="middle-sidebar">
+			<article>
+				<h2>Middle Sidebar</h2>
+				<p>Middle sidebar paragraph</p>
+			</article>
+		</aside>
 
-	<aside class="bottom-sidebar">
-		<article>
-			<h2>Bottom Sidebar</h2>
-			<p>Bottom sidebar paragraph</p>
-		</article>
-	</aside>
+		<aside class="bottom-sidebar">
+			<article>
+				<h2>Bottom Sidebar</h2>
+				<p>Bottom sidebar paragraph</p>
+			</article>
+		</aside>
 
-	<footer class="mainFooter">
-		<p>Copyright &copy; 2017 Muhammad Ajij</p>
-	</footer>
+		<footer class="mainFooter">
+			<p>Copyright &copy; 2017 Muhammad Ajij</p>
+		</footer>
 
 </div>
 	<script src="javascript.js"></script>
