Sixteenth commit, javascript back button configured for portfolio

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -37,7 +37,8 @@
             <!-- the info -->
             <div id="SnavBottom">
                 <!-- here you have to add the p tag-->
-                <p id="SP0">Support Image 1</p>  <a id="home" onclick="home()" href="#"><i class="fa fa-home fa-4x white-txt" aria-hidden="true"></i></a>
+
+                <p id="SP0">Support Image 1</p>  <a id="home" onclick="goBack()" ><i class="fa fa-home fa-4x white-txt" aria-hidden="true"></i></a>
                 <p id="SP1">Support Image 2</p> 
                 <p id="SP2">Support Image 3</p> 
                 
