Nineteenth Commit, combined new stylesheet within light and black, so functions with bootstrap. Need more animations for pricing page etc

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Support Solutions</title>
 	<link href="css/bootstrap.min.css" rel="stylesheet">
-	<link id="light" rel="stylesheet" href="css/light.css" type="text/css" />
-	<link href="css/mystyle.css" rel="stylesheet">
+	<link id="light" rel="stylesheet" href="css/dark.css" type="text/css" />
+	<!-- <link href="css/mystyle.css" rel="stylesheet"> -->
 	<link href="http://fontawesome.io/assets/font-awesome/css/font-awesome.css" rel="stylesheet" type="text/css">
 	<!-- Theme CSS -->
 
