--- a/Portfolio.html
+++ b/Portfolio.html
@@ -11,7 +11,7 @@
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<!-- Custom Fonts -->
 	<link href="http://fontawesome.io/assets/font-awesome/css/font-awesome.css" rel="stylesheet" type="text/css">
-	<link href="css/mystyle.css" rel="stylesheet">
+	<link href="css/light.css" rel="stylesheet">
 
 	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
