--- a/Portfolio.html
+++ b/Portfolio.html
@@ -70,6 +70,7 @@
 	<!-- Bootstrap Core JavaScript -->
 	<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
+	<script src="js/javascript.js"></script> 
 
 </body>
 
