--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Support Solutions</title>
 	<link href="css/bootstrap.min.css" rel="stylesheet">
-	<link id="light" rel="stylesheet" href="css/dark.css" type="text/css" />
-	<!-- <link href="css/mystyle.css" rel="stylesheet"> -->
+	<link id="light" rel="stylesheet" href="css/light.css" type="text/css" />
+	
 	<link href="http://fontawesome.io/assets/font-awesome/css/font-awesome.css" rel="stylesheet" type="text/css">
 	<!-- Theme CSS -->
 
@@ -83,7 +83,7 @@
 
 
 		<div id="mh" class="mainHeader">
-			<div class="container custom-theme-bg">
+			<div class="container">
 				<!--  Header Section-->
 				<div class="row">
 					<div class="col-md-3 col-xs-8">
