--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 </head>
 
-<body onload="time()" class="body">
+<body onload="Loadgooglemaps()" onunload="GUnload()"  onload="time()" class="body">
 	<div id=animation>
 		<!-- Navigation -->
 		<div class="lheader" id="header">
@@ -110,7 +110,7 @@
 									<li class="active"><a href="javascript:void(0);" class="home-tab"><i class="fa fa-home fa-lg" aria-hidden="true"></i> Home</a></li>
 									<li><a href="portfolio.html"><i class="fa fa-picture-o fa-lg" aria-hidden="true"></i> Portfolio</a></li>
 									<li><a href="javascript:void(0);" class="pricing-menu"><i class="fa fa-th-large" aria-hidden="true"></i> Pricing</a></li>
-									<li><a href="#" onclick="div_show()"><i class="fa fa-phone fa-lg"  aria-hidden="true"></i> Contact</a></li>
+									<li><a href="#" class="contact-tab"><i class="fa fa-phone fa-lg"  aria-hidden="true"></i> Contact</a></li>
 								</ul>
 
 								<form class="navbar-form customnavform navbar-left pull-right" role="search">
@@ -214,18 +214,18 @@
 					<div class="row">
 						<div class="col-md-12">
 							<div class="page-title-new">
-								<h2>Our Great Team</h2>
-								<span>Whom we have with us</span>
+								<h2>Our Dynamic Team</h2>
+								<span>Great Experienced Workforce</span>
 							</div>
 
 						</div>
 						<div class="col-sm-3">
 							<div class="team-members">
 								<div class="team-avatar">
-									<img class="img-responsive" src="http://keenthemes.com/assets/bootsnipp/member1.png" alt="">
+									<img class="img-responsive" src="images/Frankie-Boyle.png" alt="">
 								</div>
 								<div class="team-desc">
-									<h4>John Doe</h4>
+									<h4>Frankie Boyle</h4>
 									<span>Marketing</span>
 								</div>
 							</div>
@@ -233,10 +233,10 @@
 						<div class="col-sm-3">
 							<div class="team-members">
 								<div class="team-avatar">
-									<img class="img-responsive" src="http://keenthemes.com/assets/bootsnipp/member2.png" alt="">
+									<img class="img-responsive" src="images/jermy.png" alt="">
 								</div>
 								<div class="team-desc">
-									<h4>Melisa Doe</h4>
+									<h4>Jeremy Clarks</h4>
 									<span>Founder</span>
 								</div>
 							</div>
@@ -244,10 +244,10 @@
 						<div class="col-sm-3">
 							<div class="team-members">
 								<div class="team-avatar">
-									<img class="img-responsive" src="http://keenthemes.com/assets/bootsnipp/member3.png" alt="">
+									<img class="img-responsive" src="images/Peter_Lewis.png" alt="">
 								</div>
 								<div class="team-desc">
-									<h4>Alex Atkinson</h4>
+									<h4>Peter Lewis</h4>
 									<span>Director</span>
 								</div>
 							</div>
@@ -255,11 +255,11 @@
 						<div class="col-sm-3">
 							<div class="team-members">
 								<div class="team-avatar">
-									<img class="img-responsive" src="http://keenthemes.com/assets/bootsnipp/member3.png" alt="">
+									<img class="img-responsive" src="images/dave.png" alt="">
 								</div>
 								<div class="team-desc">
-									<h4>Alex Atkinson</h4>
-									<span>Director</span>
+									<h4>Dave Thompson</h4>
+									<span>Manager</span>
 								</div>
 							</div>
 						</div>
@@ -311,7 +311,7 @@
 									<li><a href="javascript:void(0);" class="home-tab"><i class="fa fa-home fa-lg" aria-hidden="true"></i> Home</a></li>
 									<li><a href="portfolio.html"><i class="fa fa-picture-o fa-lg" aria-hidden="true"></i> Portfolio</a></li>
 									<li class="active"><a href="javascript:void(0);" class="pricing-menu"><i class="fa fa-th-large" aria-hidden="true"></i> Pricing</a></li>
-									<li><a href="#" onclick="div_show()"><i class="fa fa-phone fa-lg"  aria-hidden="true"></i> Contact</a></li>
+									<li><a href="#" class="contact-tab"><i class="fa fa-phone fa-lg"  aria-hidden="true"></i> Contact</a></li>
 								</ul>
 
 								<form class="navbar-form customnavform navbar-left pull-right" role="search">
@@ -360,19 +360,19 @@
 							<div class="price_column price_table text-center">
 								<div class="row price_heading">
 									<div class="col-sm-12">
-										<h3>GOLD</h3>
-										<h1><b>£29</b> /mo</h1>
+										<h3>SILVER</h3>
+										<h1><b>£10</b> per Month</h1>
 									</div>
 								</div>
 								<div class="row">
 									<ul class="price_lines text-center">
-										<li class="price_linea">1 Website</li>
-										<li class="price_lineb">1 Gb Storage</li>
-										<li class="price_linea">10 GB Bandwith</li>
-										<li class="price_lineb">3 Month Support</li>
-										<li class="price_linea">Unlimited Sub-Domains</li>
-										<li class="price_lineb">5 Database</li>
-										<li class="price_linea">Full Page Site Available</li>
+										<li class="price_linea">10 Applications</li>
+										<li class="price_lineb">5 Computers</li>
+										<li class="price_linea">1 GB Storage</li>
+										<li class="price_lineb">1 Month Support</li>
+										<li class="price_linea">Unlimited Website Access</li>
+										<li class="price_lineb">5 Databases</li>
+										<li class="price_linea">No Site Installation</li>
 									</ul>
 								</div>
 								<div class="row price_button">
@@ -385,18 +385,18 @@
 								<div class="row price_heading">
 									<div class="col-sm-12">
 										<h3>GOLD</h3>
-										<h1><b>£29</b> /mo</h1>
+										<h1><b>£20</b> per Month</h1>
 									</div>
 								</div>
 								<div class="row">
 									<ul class="price_lines text-center">
-										<li class="price_linea">1 Website</li>
-										<li class="price_lineb">1 Gb Storage</li>
-										<li class="price_linea">10 GB Bandwith</li>
-										<li class="price_lineb">3 Month Support</li>
-										<li class="price_linea">Unlimited Sub-Domains</li>
-										<li class="price_lineb">5 Database</li>
-										<li class="price_linea">Full Page Site Available</li>
+										<li class="price_linea">50 Applications</li>
+										<li class="price_lineb">15 Computers</li>
+										<li class="price_linea">5 GB Storage</li>
+										<li class="price_lineb">5 Month Support</li>
+										<li class="price_linea">Unlimited Website Access</li>
+										<li class="price_lineb">8 Databases</li>
+										<li class="price_linea">No Site Installation</li>
 									</ul>
 								</div>
 								<div class="row price_button">
@@ -409,18 +409,18 @@
 								<div class="row price_heading">
 									<div class="col-sm-12">
 										<h3>PLATINUM</h3>
-										<h1><b>£39</b> /mo</h1>
+										<h1><b>£25</b> per Month</h1>
 									</div>
 								</div>
 								<div class="row">
 									<ul class="price_lines text-center">
-										<li class="price_linea">1 Website</li>
-										<li class="price_lineb">1 Gb Storage</li>
-										<li class="price_linea">10 GB Bandwith</li>
-										<li class="price_lineb">3 Month Support</li>
-										<li class="price_linea">Unlimited Sub-Domains</li>
-										<li class="price_lineb">5 Database</li>
-										<li class="price_linea">Full Page Site Available</li>
+										<li class="price_linea">Unlimited Applications</li>
+										<li class="price_lineb">Unlimited Computers</li>
+										<li class="price_linea">Unlimited GB Storage</li>
+										<li class="price_lineb">Unlimited Month Support</li>
+										<li class="price_linea">Unlimited Website Access</li>
+										<li class="price_lineb">Unlimited Databases</li>
+										<li class="price_linea">Site Installation Included</li>
 									</ul>
 								</div>
 								<div class="row price_button">
@@ -445,17 +445,17 @@
 				</div>
 			</footer>
 
-			<!-- About Section -->
 		</div>
-		<!--
-		<div id="mh" class="mainHeader">
-			<div class="container white-bg">
-				  Header Section
+	</div>
+
+	<div id="cpage" class="mainHeader">
+			<div class="container custom-theme-bg">
+				<!--  Header Section-->
 				<div class="row">
 					<div class="col-md-3 col-xs-8">
 						<div class="title">
-							<img class="supportlogo2" src="./images/s.png" alt="">
-							<a href="#" id="land">
+							<img class="supportlogo2" src="images/s.png" alt="">
+							<a href="index.html" class="land">
 								<p>SUPPORT SOLUTIONS</p>
 							</a>
 						</div>
@@ -463,44 +463,38 @@
 
 					<div class="col-md-9">
 						<nav class="navbar navbar-default custom-bg homepage-menu" role="navigation">
-
 							<div class="navbar-header">
-								<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#demo-navbar-collapse">
+								<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#demo-navbar-collapse1">
 								  <span class="sr-only">Toggle navigation</span>
 								  <span class="icon-bar"></span>
 								  <span class="icon-bar"></span>
 								  <span class="icon-bar"></span>
 								</button>
 							</div>
-							<div class="collapse navbar-collapse" id="demo-navbar-collapse">
-
+							<div class="collapse navbar-collapse" id="demo-navbar-collapse1">
 								<ul class="nav navbar-nav">
-									<li class="active">
-										<a href="index.html"> <i class="fa fa-home fa-lg" aria-hidden="true"></i> Home</a>
-									</li>
-									<li><a href="about.html"><i class="fa fa-question-circle-o fa-lg" aria-hidden="true"></i> About</a></li>
+									<li><a href="javascript:void(0);" class="home-tab"><i class="fa fa-home fa-lg" aria-hidden="true"></i> Home</a></li>
 									<li><a href="portfolio.html"><i class="fa fa-picture-o fa-lg" aria-hidden="true"></i> Portfolio</a></li>
-									<li><a href="pricing.html"><i class="fa fa-th-large" aria-hidden="true"></i> Pricing</a></li>
-									<li><a href="#" onclick="div_show()"><i class="fa fa-phone fa-lg"  aria-hidden="true"></i> Contact</a></li>
+									<li ><a href="javascript:void(0);" class="pricing-menu"><i class="fa fa-th-large" aria-hidden="true"></i> Pricing</a></li>
+									<li class="active"><a href="#" class="contact-tab"><i class="fa fa-phone fa-lg"  aria-hidden="true"></i> Contact</a></li>
 								</ul>
 
 								<form class="navbar-form customnavform navbar-left pull-right" role="search">
 									<div class="input-group">
 										<input type="text" class="form-control" placeholder="Search">
 										<span class="input-group-btn">
-										  <button type="submit" class="btn btn-default custom-search-button">Search</button>                
+										  <button type="submit" class="btn btn-default custom-search-button">Search</button>     
 										</span>
 									</div>
 								</form>
 							</div>
-
 						</nav>
 					</div>
 				</div>
 			</div>
 
-			<section id="banner-new">
-				<div class="container white-bg">
+			<section id="banner-new" class="top-banner">
+				<div class="container custom-theme-bg">
 					<div class="row">
 						<div class="col-md-12">
 							<div class="slideshowdiv">
@@ -511,87 +505,48 @@
 				</div>
 			</section>
 
-		<main>
-				<div class="container white-bg">
+			<section class="page-title">
+				<div class="container brdr-btm custom-theme-bg">
 					<div class="row">
-						<div class="col-md-9">
-							<div id="content" class="mainContent">
-								<article class="topContent" id="topContent">
-									<a class="arrow" href="javascript:void(0);"> <i class="fa fa-arrow-circle-down fa-2x grey-txt" aria-hidden="true"></i> </a>
-									<a class="arrowup" href="javascript:void(0);"> <i class="fa fa-arrow-circle-up fa-2x grey-txt" aria-hidden="true"></i> </a>
-									<header>
-										<h2>
-											<p title="First Post">Who we are?</p>
-										</h2>
-									</header>
-
-									<footer>
-										<p class="postinfo">Post One</p>
-									</footer>
-									<content class="detail">
-										<p> Support Solutions is a highly regarded and influential support firm with a huge reputation. We have effected and changed the way support queries are controlled and we continue to accurately predict and influence this mechanism. </p>
-									</content>
-								</article>
-
-								<article class="middleContent" id="middleContent">
-									<a class="arrow2" href="javascript:void(0);"> <i class="fa fa-arrow-circle-down fa-2x grey-txt" aria-hidden="true"></i> </a>
-									<a class="arrowup2" href="javascript:void(0);"> <i class="fa fa-arrow-circle-up fa-2x grey-txt" aria-hidden="true"></i> </a>
-									<header>
-										<h2>
-											<p title="First Post">Second Post</p>
-										</h2>
-									</header>
-
-									<footer>
-										<p class="postinfo">Post One</p>
-									</footer>
-									<content class="detail2">
-										<p> Support Solutions is a highly regarded and influential support firm with a huge reputation. We have effected and changed the way support queries are controlled and we continue to accurately predict and influence this mechanism. </p>
-									</content>
-								</article>
-
-								<article class="bottomContent" id="bottomContent">
-									<a class="arrow3" href="javascript:void(0);"> <i class="fa fa-arrow-circle-down fa-2x grey-txt" aria-hidden="true"></i> </a>
-									<a class="arrowup3" href="javascript:void(0);"> <i class="fa fa-arrow-circle-up fa-2x grey-txt" aria-hidden="true"></i> </a>
-									<header>
-										<h2>
-											<p title="First Post">Third Post</p>
-										</h2>
-									</header>
-
-									<footer>
-										<p class="postinfo">Post three</p>
-
-									</footer>
-									<content class="detail3">
-										<p> Support Solutions is a highly regarded and influential support firm with a huge reputation. We have effected and changed the way support queries are controlled and we continue to accurately predict and influence this mechanism. </p>
-									</content>
-								</article>
+						<div class="col-md-12">
+							<div class="page-title-new">
+								<h2>Contact</h2>
+								<span>We look forward from hearing from you.</span>
 							</div>
-						</div>
-						<div class="col-md-3">
-							<div id="sidebar" class="sidebar">
-								<aside class="top-sidebar">
-									<h1>hello</h1>
-									<p>this is content</p>
-								</aside>
-								<aside class="middle-sidebar">
-									<h1>hello</h1>
-									<p>this is content</p>
-								</aside>
-								<aside class="bottom-sidebar">
-									<h1>hello</h1>
-									<p>this is content</p>
-								</aside>
 
-							</div>
 						</div>
 					</div>
 				</div>
-			</main>
+			</section>
+			<section id="pricing-new" class="pricing-box">
+				<div class="container custom-theme-bg">
+					<div class="row">
+					<div class ="col-md-12">
+					<div class ="col-md-6">
+						<form action="#" id="cform" method="post" name="form">
+					<a id="close" href="#" onclick="div_hide()"><i class="fa fa-times-circle-o fa-2x white-txt" aria-hidden="true"></i></a>
+					<h2 id="htwo2">Contact Us</h2>
+					<hr>
+
+
+					<input id="name" name="name" placeholder="Please Enter Your First Name" type="text">
+					<input id="sname" name="sname" placeholder="Please Enter Your Last Name" type="text">
+
+					<input id="email" name="email" placeholder="Please Enter Your Email" type="text">
+					<textarea id="msg" name="message" placeholder="How May We Help You?"></textarea>
+					<a href="javascript:%20validateForm()" onclick="myFunction()" id="submit">Send</a>
+				</form>
+
+					</div>	
+						<div class="col-md-6" id="Googlemaps" style="width:50%;height:450px;border:1px solid #CECECE;"></div>
+					</div>
+
+					<div>
+				</div>
+			</section>
 
 			<footer>
-				<div class="container white-bg">
+				<div class="container custom-theme-bg">
 					<div class="row">
 						<div class="col-md-12">
 							<div class="mainFooter">
@@ -602,8 +557,10 @@
 					</div>
 				</div>
 			</footer>
-</div>
--->
+
+			<!-- About Section -->
+		</div>
+		
 		<!-- About Section -->
 	</div>
 
@@ -611,26 +568,59 @@
 	<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<!-- Plugin JavaScript -->
+	<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+	<script type="text/javascript">
 
+	function Loadgooglemaps() {
+		var LatLong = new google.maps.LatLng(52.6294673,-1.1380354);
+		var Options = {
+			zoom: 18,
+			center: LatLong,
+			disableDefaultUI: true,
+			panControl: true,
+			zoomControl: true,
+			zoomControlOptions: {
+				style: google.maps.ZoomControlStyle.DEFAULT
+			},
+
+			mapTypeControl: true,
+			mapTypeControlOptions: {
+				style: google.maps.MapTypeControlStyle.HORIZONTAL_BAR
+			},
+			streetViewControl: true,
+			mapTypeId: google.maps.MapTypeId.ROADMAP
+			}
+		var map = new google.maps.Map(document.getElementById("Googlemaps"), Options);
+		var markericon = new google.maps.Marker({
+			position: LatLong,
+			map: map,
+			title:"le1 9bh"
+		});
+		var infowindow = new google.maps.InfoWindow({
+			content: "De Montfort University"
+			});
+			google.maps.event.addListener(markericon, "click", function() {
+				infowindow.open(map, markericon);
+			});
+	}
+</script>
 	<script src="js/javascript.js"></script>
 	<script>
-		$(document).ready(function() {
-			$('.custom-cls').click(function() {
-				if ($('this').hasClass('btn-default')) {
-					$('this').removeClass('btn-default');
+		// $(document).ready(function() {
+		// 	$('.custom-cls').click(function() {
+		// 		if ($('this').hasClass('btn-default')) {
+		// 			$('this').removeClass('btn-default');
 
-				} else {
+		// 		} else {
 
-				}
-			});
-		});
+		// 		}
+		// 	});
+		// });
 
 	</script>
-	<div id="contactbody">
+	<!-- <div id="contactbody">
 		<div id="popupdiv">
-			<!-- Popup Div Starts Here -->
 			<div id="popupContact">
-				<!-- Contact Us Form -->
 				<form action="#" id="cform" method="post" name="form">
 					<a id="close" href="#" onclick="div_hide()"><i class="fa fa-times-circle-o fa-2x white-txt" aria-hidden="true"></i></a>
 					<h2 id="htwo2">Contact Us</h2>
@@ -645,9 +635,8 @@
 					<a href="javascript:%20validateForm()" onclick="myFunction()" id="submit">Send</a>
 				</form>
 			</div>
-			<!-- Popup Div Ends Here -->
 		</div>
-	</div>
+	</div> -->
 </body>
 
 </html>
