--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 							<div class="collapse navbar-collapse" id="demo-navbar-collapse">
 								<ul class="nav navbar-nav">
 									<li class="active"><a href="javascript:void(0);" class="home-tab"><i class="fa fa-home fa-lg" aria-hidden="true"></i> Home</a></li>
-									<li><a href="portfolio.html"><i class="fa fa-picture-o fa-lg" aria-hidden="true"></i> Portfolio</a></li>
+									<li><a href="Portfolio.html"><i class="fa fa-picture-o fa-lg" aria-hidden="true"></i> Portfolio</a></li>
 									<li><a href="javascript:void(0);" class="pricing-menu"><i class="fa fa-th-large" aria-hidden="true"></i> Pricing</a></li>
 									<li><a href="#" class="contact-tab"><i class="fa fa-phone fa-lg"  aria-hidden="true"></i> Contact</a></li>
 								</ul>
@@ -309,7 +309,7 @@
 							<div class="collapse navbar-collapse" id="demo-navbar-collapse1">
 								<ul class="nav navbar-nav">
 									<li><a href="javascript:void(0);" class="home-tab"><i class="fa fa-home fa-lg" aria-hidden="true"></i> Home</a></li>
-									<li><a href="portfolio.html"><i class="fa fa-picture-o fa-lg" aria-hidden="true"></i> Portfolio</a></li>
+									<li><a href="Portfolio.html"><i class="fa fa-picture-o fa-lg" aria-hidden="true"></i> Portfolio</a></li>
 									<li class="active"><a href="javascript:void(0);" class="pricing-menu"><i class="fa fa-th-large" aria-hidden="true"></i> Pricing</a></li>
 									<li><a href="#" class="contact-tab"><i class="fa fa-phone fa-lg"  aria-hidden="true"></i> Contact</a></li>
 								</ul>
@@ -474,7 +474,7 @@
 							<div class="collapse navbar-collapse" id="demo-navbar-collapse1">
 								<ul class="nav navbar-nav">
 									<li><a href="javascript:void(0);" class="home-tab"><i class="fa fa-home fa-lg" aria-hidden="true"></i> Home</a></li>
-									<li><a href="portfolio.html"><i class="fa fa-picture-o fa-lg" aria-hidden="true"></i> Portfolio</a></li>
+									<li><a href="Portfolio.html"><i class="fa fa-picture-o fa-lg" aria-hidden="true"></i> Portfolio</a></li>
 									<li ><a href="javascript:void(0);" class="pricing-menu"><i class="fa fa-th-large" aria-hidden="true"></i> Pricing</a></li>
 									<li class="active"><a href="#" class="contact-tab"><i class="fa fa-phone fa-lg"  aria-hidden="true"></i> Contact</a></li>
 								</ul>
