--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link id="light" rel="stylesheet" href="css/light.css" type="text/css" />
 	
-	<link href="http://fontawesome.io/assets/font-awesome/css/font-awesome.css" rel="stylesheet" type="text/css">
+	<link href="font-awesome-4.7.0/css/font-awesome.css" rel="stylesheet" type="text/css">
 	<!-- Theme CSS -->
 
 	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -565,7 +565,7 @@
 	</div>
 
 	<!-- Bootstrap Core JavaScript -->
-	<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+	<script src="js/jquery-3.1.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<!-- Plugin JavaScript -->
 	<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
