Commit 30, portfolio working will locally stored 3rd party code (Jquery and fontawesome)

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 
 </head>
 
-<body onload="Loadgooglemaps()" onunload="GUnload()"  onload="time()" class="body">
+<!-- onload="Loadgooglemaps()" onunload="GUnload()"  -->
+
+<body onload="time()" class="body">
 	<div id=animation>
 		<!-- Navigation -->
 		<div class="lheader" id="header">
