--- a/Portfolio.html
+++ b/Portfolio.html
@@ -10,7 +10,7 @@
 	<!-- Bootstrap Core CSS -->
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<!-- Custom Fonts -->
-	<link href="http://fontawesome.io/assets/font-awesome/css/font-awesome.css" rel="stylesheet" type="text/css">
+	<link href="font-awesome-4.7.0/css/font-awesome.css" rel="stylesheet" type="text/css">
 	<link href="css/light.css" rel="stylesheet">
 
 	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -68,7 +68,7 @@
 	</div>
 
 	<!-- Bootstrap Core JavaScript -->
-	<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+	<script src="js/jquery-3.1.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/javascript.js"></script> 
 
