Commit 31, resolved the loading issue of one of the team avatars

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 						<div class="col-sm-3">
 							<div class="team-members">
 								<div class="team-avatar">
-									<img class="img-responsive" src="images/dave.png" alt="">
+									<img class="img-responsive" src="images/Dave.png" alt="">
 								</div>
 								<div class="team-desc">
 									<h4>Dave Thompson</h4>
