--- a/index.html
+++ b/index.html
@@ -11,20 +11,13 @@
 	<link id="light" rel="stylesheet" href="css/light.css" type="text/css" />
 	
 	<link href="font-awesome-4.7.0/css/font-awesome.css" rel="stylesheet" type="text/css">
-	<!-- Theme CSS -->
 
-	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-	<!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
 
 </head>
 
 <!-- onload="Loadgooglemaps()" onunload="GUnload()"  -->
-
-<body onload="time()" class="body">
+<!-- onload="time()" -->
+<body  onload="time()" class="body">
 	<div id=animation>
 		<!-- Navigation -->
 		<div class="lheader" id="header">
@@ -112,7 +105,7 @@
 									<li class="active"><a href="javascript:void(0);" class="home-tab"><i class="fa fa-home fa-lg" aria-hidden="true"></i> Home</a></li>
 									<li><a href="Portfolio.html"><i class="fa fa-picture-o fa-lg" aria-hidden="true"></i> Portfolio</a></li>
 									<li><a href="javascript:void(0);" class="pricing-menu"><i class="fa fa-th-large" aria-hidden="true"></i> Pricing</a></li>
-									<li><a href="#" class="contact-tab"><i class="fa fa-phone fa-lg"  aria-hidden="true"></i> Contact</a></li>
+									<li><a href="javascript:void(0);" class="contact-tab"><i class="fa fa-phone fa-lg"  aria-hidden="true"></i> Contact</a></li>
 								</ul>
 
 								<form class="navbar-form customnavform navbar-left pull-right" role="search">
@@ -313,7 +306,7 @@
 									<li><a href="javascript:void(0);" class="home-tab"><i class="fa fa-home fa-lg" aria-hidden="true"></i> Home</a></li>
 									<li><a href="Portfolio.html"><i class="fa fa-picture-o fa-lg" aria-hidden="true"></i> Portfolio</a></li>
 									<li class="active"><a href="javascript:void(0);" class="pricing-menu"><i class="fa fa-th-large" aria-hidden="true"></i> Pricing</a></li>
-									<li><a href="#" class="contact-tab"><i class="fa fa-phone fa-lg"  aria-hidden="true"></i> Contact</a></li>
+									<li><a href="javascript:void(0);" class="contact-tab"><i class="fa fa-phone fa-lg"  aria-hidden="true"></i> Contact</a></li>
 								</ul>
 
 								<form class="navbar-form customnavform navbar-left pull-right" role="search">
@@ -466,19 +459,19 @@
 					<div class="col-md-9">
 						<nav class="navbar navbar-default custom-bg homepage-menu" role="navigation">
 							<div class="navbar-header">
-								<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#demo-navbar-collapse1">
+								<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#demo-navbar-collapse2">
 								  <span class="sr-only">Toggle navigation</span>
 								  <span class="icon-bar"></span>
 								  <span class="icon-bar"></span>
 								  <span class="icon-bar"></span>
 								</button>
 							</div>
-							<div class="collapse navbar-collapse" id="demo-navbar-collapse1">
+							<div class="collapse navbar-collapse" id="demo-navbar-collapse2">
 								<ul class="nav navbar-nav">
 									<li><a href="javascript:void(0);" class="home-tab"><i class="fa fa-home fa-lg" aria-hidden="true"></i> Home</a></li>
 									<li><a href="Portfolio.html"><i class="fa fa-picture-o fa-lg" aria-hidden="true"></i> Portfolio</a></li>
 									<li ><a href="javascript:void(0);" class="pricing-menu"><i class="fa fa-th-large" aria-hidden="true"></i> Pricing</a></li>
-									<li class="active"><a href="#" class="contact-tab"><i class="fa fa-phone fa-lg"  aria-hidden="true"></i> Contact</a></li>
+									<li class="active"><a href="javascript:void(0);" class="contact-tab"><i class="fa fa-phone fa-lg"  aria-hidden="true"></i> Contact</a></li>
 								</ul>
 
 								<form class="navbar-form customnavform navbar-left pull-right" role="search">
@@ -520,30 +513,23 @@
 					</div>
 				</div>
 			</section>
-			<section id="pricing-new" class="pricing-box">
+			<section id="contact-new" class="contact-box">
 				<div class="container custom-theme-bg">
 					<div class="row">
-					<div class ="col-md-12">
-					<div class ="col-md-6">
-						<form action="#" id="cform" method="post" name="form">
-					<a id="close" href="#" onclick="div_hide()"><i class="fa fa-times-circle-o fa-2x white-txt" aria-hidden="true"></i></a>
-					<h2 id="htwo2">Contact Us</h2>
-					<hr>
+							<div class ="col-md-6" >
+									<form action="#" id="cform" method="post" name="form">
+							
+										<input id="name" name="name" placeholder="Please Enter Your First Name" type="text">
+										<input id="sname" name="sname" placeholder="Please Enter Your Last Name" type="text">
 
+										<input id="email" name="email" placeholder="Please Enter Your Email" type="text">
+										<textarea id="msg" name="message" placeholder="How May We Help You?"></textarea>
+										<a href="javascript:%20validateForm()" onclick="myFunction()" id="submit">Send</a>
+									</form>
 
-					<input id="name" name="name" placeholder="Please Enter Your First Name" type="text">
-					<input id="sname" name="sname" placeholder="Please Enter Your Last Name" type="text">
-
-					<input id="email" name="email" placeholder="Please Enter Your Email" type="text">
-					<textarea id="msg" name="message" placeholder="How May We Help You?"></textarea>
-					<a href="javascript:%20validateForm()" onclick="myFunction()" id="submit">Send</a>
-				</form>
-
-					</div>	
-						<div class="col-md-6" id="Googlemaps" style="width:50%;height:450px;border:1px solid #CECECE;"></div>
+						</div>	
+						<div class="col-md-6" id="Googlemaps"></div>
 					</div>
-
-					<div>
 				</div>
 			</section>
 
@@ -570,42 +556,10 @@
 	<script src="js/jquery-3.1.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<!-- Plugin JavaScript -->
-	<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
-	<script type="text/javascript">
-
-	function Loadgooglemaps() {
-		var LatLong = new google.maps.LatLng(52.6294673,-1.1380354);
-		var Options = {
-			zoom: 18,
-			center: LatLong,
-			disableDefaultUI: true,
-			panControl: true,
-			zoomControl: true,
-			zoomControlOptions: {
-				style: google.maps.ZoomControlStyle.DEFAULT
-			},
-
-			mapTypeControl: true,
-			mapTypeControlOptions: {
-				style: google.maps.MapTypeControlStyle.HORIZONTAL_BAR
-			},
-			streetViewControl: true,
-			mapTypeId: google.maps.MapTypeId.ROADMAP
-			}
-		var map = new google.maps.Map(document.getElementById("Googlemaps"), Options);
-		var markericon = new google.maps.Marker({
-			position: LatLong,
-			map: map,
-			title:"le1 9bh"
-		});
-		var infowindow = new google.maps.InfoWindow({
-			content: "De Montfort University"
-			});
-			google.maps.event.addListener(markericon, "click", function() {
-				infowindow.open(map, markericon);
-			});
-	}
-</script>
+	<script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDnNZcVhL7-2stCu58tbidkDQqEqifXt14&callback=initMap">
+    </script>
+	
 	<script src="js/javascript.js"></script>
 	<script>
 		// $(document).ready(function() {
